[tool.poetry]
name = "geomapper"
version = "0.7.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.0.0"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.2.0" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
cameratransform = "1.2"
#cameratransform = { git = "https://github.com/rgerum/cameratransform", rev = "ed36491" }
geojson-pydantic = "^1.1.2"
shapely = "^2.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
