[tool.poetry]
name = "geomapper"
version = "0.10.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.0.0"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.5.0" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }
redis = "^5.3.1"
pydantic-settings = "^2.10.1"
prometheus-client = "^0.22.1"
cameratransform = { git = "https://github.com/rgerum/cameratransform", rev = "ed36491" }
geojson-pydantic = "^2.0.0"
shapely = "^2.0.6"
pytest = "8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
